syntax = "proto3";

option go_package = "github.com/Sweetloveinyourheart/micro/proto";

service Authentication {
	rpc SignUp(SignUpRequest) returns (SignUpResponse);
}

message SignUpRequest {
    string email = 1;
    string password = 2;
    string full_name = 3;
    string gender = 4;
    string birthday = 5;
    string phone = 6;
}

message SignUpResponse {
    string message = 1;
    bool success = 2;
}